--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
     "react-tabs": "^6.0.2",
